Add social network links

--- a/index.html
+++ b/index.html
@@ -40,23 +40,34 @@
         <article class="cover-letter__article">
           <div class="cover-letter__desc">
             <p class="desc">
-              My name is Gabriel Berbetoros. I'm a Creative <b>Music Composer and sound designer</b> for video games and visual effects, 
-              proficient in multiple <b>audio production softwares</b>. Specialized in a wide variety of
-              genres, from modern to orchestral music.
+              My name is Gabriel Berbetoros. I'm a Creative <b>Music Composer and sound designer</b> for video games and visual effects, proficient in multiple
+              <b>audio production softwares</b>. Specialized in a wide variety of genres, from modern to orchestral music.
             </p>
             <p class="class=">
               If you're interested in my work or have any questions, feel free to contact me.
             </p>
+            <nav class="nav nav-social">
+              <a class="nav-social-link" href="https://soundcloud.com/gabriel-berbetoros" target="_blank" rel="noopener noreferrer"
+                ><div class="nav-social__icon nav-social__icon-soundcloud"></div
+              ></a>
+              <a class="nav-social-link" href="https://twitter.com/gabiberbetoros" target="_blank" rel="noopener noreferrer"
+                ><div class="nav-social__icon nav-social__icon-twitter"></div
+              ></a>
+              <a class="nav-social-link" href="https://www.instagram.com/gabiberbetoros/" target="_blank" rel="noopener noreferrer"
+                ><div class="nav-social__icon nav-social__icon-ig"></div
+              ></a>
+              <a class="nav-social-link" href="https://www.linkedin.com/in/gabriel-berbetoros-7a019b137/" target="_blank" rel="noopener noreferrer"
+                ><div class="nav-social__icon nav-social__icon-in"></div
+              ></a>
+            </nav>
           </div>
           <div class="cover-letter__photo"></div>
         </article>
       </section>
 
-      <section class="wow pulse section skills">
+      <section class="wow fadeInRight section skills">
         <h2 class="section__title">Skills</h2>
-        <p class="desc">
-          I work with a <b>variety of instruments</b>, <b>musical softwares</b> and <b>sound design tools</b> such like:
-        </p>
+        <p class="desc">I work with a <b>variety of instruments</b>, <b>musical softwares</b> and <b>sound design tools</b> such like:</p>
         <ul>
           <li>Pro Tools</li>
           <li>Cubase</li>
@@ -72,7 +83,7 @@
         </ul>
       </section>
 
-      <section class="wow pulse section examples">
+      <section class="wow fadeInRight section examples">
         <h2 class="section__title">Examples</h2>
 
         <iframe
@@ -86,20 +97,20 @@
         ></iframe>
       </section>
 
-      <section class="section contact" id="contact">
+      <!-- <section class="section contact" id="contact">
         <h2 class="section__title">Contact Me</h2>
         <p class="desc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam nostrum nemo hic ut sit officia maxime, laborum incidunt cumque nulla eius earum, quod culpa minus.
+          Feel free to cantact me at any time, and I'll do my best to reply as soon as possible.
         </p>
         <form class="contact__form" action="">
           <input class="field" type="text" placeholder="" />
           <input class="field" type="text" placeholder="" />
           <input class="field" type="email" name="" placeholder="" />
           <textarea class="field field--textarea" name="" cols="30" rows="10" placeholder=""></textarea>
-          <a class="btn btn--contact" href="">Enviar</a>
+          <a class="btn" href="">Enviar</a>
         </form>
       </section>
-    </main>
+    </main> -->
 
     <footer></footer>
 
