Fix mobil design bugs, Add footer, Add animation to social network links

--- a/index.html
+++ b/index.html
@@ -25,17 +25,16 @@
           <h2 class="title__subtitle">Composer | Sound Designer</h2>
         </article>
         <nav class="nav header__nav">
-          <a class="nav-link" href="">About</a>
-          <a class="nav-link" href="">Skills</a>
-          <a class="nav-link" href="">Experience</a>
-          <a class="nav-link" href="">Examples</a>
-          <a class="nav-link" href="">Contact</a>
+          <a class="nav-link" href="#skills">Skills</a>
+          <a class="nav-link" href="#experience">Experience</a>
+          <a class="nav-link" href="#example">Examples</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </nav>
       </section>
     </header>
 
     <main>
-      <section class="section cover-letter">
+      <section class="section cover-letter" id="about">
         <h2 class="section__title">HELLO!</h2>
         <article class="cover-letter__article">
           <div class="cover-letter__desc">
@@ -47,16 +46,16 @@
               If you're interested in my work or have any questions, feel free to contact me.
             </p>
             <nav class="nav nav-social">
-              <a class="nav-social-link" href="https://soundcloud.com/gabriel-berbetoros" target="_blank" rel="noopener noreferrer"
+              <a class="nav-social-link" href="https://soundcloud.com/gabriel-berbetoros" target="_blank" rel="noopener noreferrer" title="SoundCloud"
                 ><div class="nav-social__icon nav-social__icon-soundcloud"></div
               ></a>
-              <a class="nav-social-link" href="https://twitter.com/gabiberbetoros" target="_blank" rel="noopener noreferrer"
+              <a class="nav-social-link" href="https://twitter.com/gabiberbetoros" target="_blank" rel="noopener noreferrer" title="Twitter"
                 ><div class="nav-social__icon nav-social__icon-twitter"></div
               ></a>
-              <a class="nav-social-link" href="https://www.instagram.com/gabiberbetoros/" target="_blank" rel="noopener noreferrer"
+              <a class="nav-social-link" href="https://www.instagram.com/gabiberbetoros/" target="_blank" rel="noopener noreferrer" title="Instagram"
                 ><div class="nav-social__icon nav-social__icon-ig"></div
               ></a>
-              <a class="nav-social-link" href="https://www.linkedin.com/in/gabriel-berbetoros-7a019b137/" target="_blank" rel="noopener noreferrer"
+              <a class="nav-social-link" href="https://www.linkedin.com/in/gabriel-berbetoros-7a019b137/" target="_blank" rel="noopener noreferrer" title="LinkedIn"
                 ><div class="nav-social__icon nav-social__icon-in"></div
               ></a>
             </nav>
@@ -65,7 +64,7 @@
         </article>
       </section>
 
-      <section class="wow fadeInRight section skills">
+      <section class="wow fadeInRight section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <p class="desc">I work with a <b>variety of instruments</b>, <b>musical softwares</b> and <b>sound design tools</b> such like:</p>
         <ul>
@@ -83,7 +82,7 @@
         </ul>
       </section>
 
-      <section class="wow fadeInRight section examples">
+      <section class="wow fadeInRight section examples" id="example">
         <h2 class="section__title">Examples</h2>
 
         <iframe
@@ -109,10 +108,39 @@
           <textarea class="field field--textarea" name="" cols="30" rows="10" placeholder=""></textarea>
           <a class="btn" href="">Enviar</a>
         </form>
-      </section>
-    </main> -->
+      </section>-->
+    </main> 
 
-    <footer></footer>
+    <footer>
+      <section class="section footer__wrapper">
+          <h4 class="footer__name">Gabi 👽 Berbetoros | Composer | Sound Designer</h4>
+          <!-- <small class="footer__author"> Web made with love by 🦉 <a href="https://feralonsomaccari.github.io/my-portfolio/" target="_blank" rel="noopener">Fer Alonso Maccari</a>. </small> -->
+        <nav class="nav nav-social">
+          <a class="nav-social-link" href="https://soundcloud.com/gabriel-berbetoros" target="_blank" rel="noopener noreferrer" title="SoundCloud"
+          ><div class="nav-social__icon nav-social__icon-soundcloud"></div
+          ></a>
+          <a class="nav-social-link" href="https://twitter.com/gabiberbetoros" target="_blank" rel="noopener noreferrer" title="Twitter"
+          ><div class="nav-social__icon nav-social__icon-twitter"></div
+            ></a>
+            <a class="nav-social-link" href="https://www.instagram.com/gabiberbetoros/" target="_blank" rel="noopener noreferrer" title="Instagram"
+            ><div class="nav-social__icon nav-social__icon-ig"></div
+              ></a>
+          <a class="nav-social-link" href="https://www.linkedin.com/in/gabriel-berbetoros-7a019b137/" target="_blank" rel="noopener noreferrer" title="LinkedIn"
+          ><div class="nav-social__icon nav-social__icon-in"></div
+          ></a>
+        </nav>
+        <!-- <div class="footer__wrapper">
+          <nav class="nav header__nav">
+            <a class="nav-link" href="#skills">Skills</a>
+            <a class="nav-link" href="#experience">Experience</a>
+            <a class="nav-link" href="#example">Examples</a>
+            <a class="nav-link" href="#contact">Contact</a>
+          </nav>
+        </div> -->
+      </section>
+
+
+    </footer>
 
     <script src="js/particles.js-master/particles.min.js"></script>
     <script src="js/wow.min.js"></script>
