--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <section class="section footer__wrapper">
           <h4 class="footer__name">Gabi 👽 Berbetoros | Composer | Sound Designer</h4>
           <!-- <small class="footer__author"> Web made with love by 🦉 <a href="https://feralonsomaccari.github.io/my-portfolio/" target="_blank" rel="noopener">Fer Alonso Maccari</a>. </small> -->
-        <nav class="nav nav-social">
+        <nav class="nav nav-social nav-social--footer">
           <a class="nav-social-link" href="https://soundcloud.com/gabriel-berbetoros" target="_blank" rel="noopener noreferrer" title="SoundCloud"
           ><div class="nav-social__icon nav-social__icon-soundcloud"></div
           ></a>
