Add Experience section

--- a/index.html
+++ b/index.html
@@ -66,20 +66,42 @@
 
       <section class="wow fadeInRight section skills" id="skills">
         <h2 class="section__title">Skills</h2>
-        <p class="desc">I work with a <b>variety of instruments</b>, <b>musical softwares</b> and <b>sound design tools</b> such like:</p>
-        <ul>
-          <li>Pro Tools</li>
-          <li>Cubase</li>
-          <li>Nuendo</li>
-          <li>Ableton</li>
-          <li>Live</li>
-          <li>Reaper</li>
-          <li>Logic</li>
-          <li>Fmod</li>
-          <li>Sibelius</li>
-          <li>Guitar Pro</li>
-          <li>Studio One</li>
-        </ul>
+        <p class="desc">I work with a variety of instruments, musical softwares and sound design tools</p>
+
+        <p><b><u>Composition and Production</u>:</b> Soundtracks, Adaptive Music, Animation Videos, Albums and Music Production for bands.</p>
+        <p><b><u>Sound Design</u>:</b> Creating, recording, editing and processing of sound effects and foley.</p>
+        <p><b><u>Audio Hardware</u>:</b> Studio recording with Audio Interfaces/Consoles and Live PA in shows.</p>
+        <p><b><u>Audio Softwares</u>:</b> Pro Tools, Cubase, Ableton, Nuendo, Logic, FL Studio, Reaper.</p>
+        <p><b><u>Software Experience</u>:</b> Unity, Fmod, Sibelius, Musescore.</p>
+        <p><b><u>Additional Software Esperience</u>:</b> Adobe Photoshop, Microsoft Office Suite, VEGAS Pro.</p>
+      </section>
+
+      <section class="wow fadeInRight section experience" id="experience">
+        <h2 class="section__title">Experience</h2>
+          <div class="experience__item">
+            <span class="experience__date">2019 - Present</span>
+            <div class="experience__desc">
+              <h4 class="experience__desc__title">Freelancer Music Traslator</h4>
+              <a class="link experience__desc__subtitle" href="https://www.rws.com/our-teams/rws-moravia/" target="_blank" rel="noopener noreferrer">Moravia</a> 
+              <span>Correctly working as a freelance music translator for RWS Moravia.</span>
+            </div>
+          </div>
+          <div class="experience__item">
+            <span class="experience__date">2012 - Present</span>
+            <div class="experience__desc">
+              <h4 class="experience__desc__title">Recording Technician</h4>
+              <a class="link experience__desc__subtitle" href="https://www.rws.com/our-teams/rws-moravia/" target="_blank" rel="noopener noreferrer">"Del Fondo" Studio</a>               
+              <span class="experience__desc">Recording, editing, mixing and mastering technician in "Del Fondo" studio, with a history of over 50+ bands and albums.</span>
+            </div>
+          </div>
+          <div class="experience__item">
+            <span class="experience__date">2011 - Present</span>
+            <div class="experience__desc">
+              <h4 class="experience__desc__title">Music Composer and Sound Designer</h4>
+              <h5 class="experience__desc__subtitle experience__desc__subtitle--nourl">Freelancer</h5>
+              <span class="experience__desc">Worked in over 20 redords, as musician and producer, recording technician and mixing/mastering technician, 2+ games (one of them currently in development), as well as a freelance music composer for 10 years.</span>
+            </div>
+          </div>
       </section>
 
       <section class="wow fadeInRight section examples" id="example">
