Update Experience section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <span class="experience__date">2019 - Present</span>
             <div class="experience__desc">
               <h4 class="experience__desc__title">Freelancer Music Traslator</h4>
-              <a class="link experience__desc__subtitle" href="https://www.rws.com/our-teams/rws-moravia/" target="_blank" rel="noopener noreferrer">Moravia</a> 
+              <a class="link link" href="https://www.rws.com/our-teams/rws-moravia/" target="_blank" rel="noopener noreferrer">Moravia</a> 
               <span>Correctly working as a freelance music translator for RWS Moravia.</span>
             </div>
           </div>
@@ -90,7 +90,7 @@
             <span class="experience__date">2012 - Present</span>
             <div class="experience__desc">
               <h4 class="experience__desc__title">Recording Technician</h4>
-              <a class="link experience__desc__subtitle" href="https://www.rws.com/our-teams/rws-moravia/" target="_blank" rel="noopener noreferrer">"Del Fondo" Studio</a>               
+              <a class="link link" href="https://www.rws.com/our-teams/rws-moravia/" target="_blank" rel="noopener noreferrer">"Del Fondo" Studio</a>               
               <span class="experience__desc">Recording, editing, mixing and mastering technician in "Del Fondo" studio, with a history of over 50+ bands and albums.</span>
             </div>
           </div>
@@ -98,24 +98,29 @@
             <span class="experience__date">2011 - Present</span>
             <div class="experience__desc">
               <h4 class="experience__desc__title">Music Composer and Sound Designer</h4>
-              <h5 class="experience__desc__subtitle experience__desc__subtitle--nourl">Freelancer</h5>
-              <span class="experience__desc">Worked in over 20 redords, as musician and producer, recording technician and mixing/mastering technician, 2+ games (one of them currently in development), as well as a freelance music composer for 10 years.</span>
+              <h5 class="link link--nourl">Freelancer</h5>
+              <span class="experience__desc">Worked in over 20 redords, as musician and producer, recording technician and mixing/mastering technician, 
+                2+ games (one of them currently in development), as well as a freelance music composer for 10 years.
+                Curently composer of music and lyrics of "<a class="link" href="https://www.instagram.com/animaoficial/">Anima</a>", band from Rosario, Argentina.
+              </span>
             </div>
           </div>
       </section>
 
       <section class="wow fadeInRight section examples" id="example">
-        <h2 class="section__title">Examples</h2>
-
-        <iframe
-          class="desc"
-          width="100%"
-          height="500"
-          scrolling="no"
-          frameborder="no"
-          allow="autoplay"
-          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/865961664&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-        ></iframe>
+        <div class="wrapper">
+          <h2 class="section__title">Examples</h2>
+  
+          <iframe
+            class="desc"
+            width="100%"
+            height="500"
+            scrolling="no"
+            frameborder="no"
+            allow="autoplay"
+            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/865961664&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+          ></iframe>
+        </div>
       </section>
 
       <section class="section contact" id="contact">
