Update Experience section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-      <section class="section cover-letter" id="about">
+      <section class="wow fadeInRight section cover-letter" id="about">
         <h2 class="section__title">HELLO!</h2>
         <article class="cover-letter__article">
           <div class="cover-letter__desc">
@@ -107,10 +107,8 @@
           </div>
       </section>
 
-      <section class="wow fadeInRight section examples" id="example">
-        <div class="wrapper">
+      <section class="wow fadeInRight section examples" id="">
           <h2 class="section__title">Examples</h2>
-  
           <iframe
             class="desc"
             width="100%"
@@ -120,10 +118,9 @@
             allow="autoplay"
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/865961664&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
           ></iframe>
-        </div>
       </section>
 
-      <section class="section contact" id="contact">
+      <section class="wow fadeInRight section contact" id="contact">
         <h2 class="section__title">Contact Me</h2>
         <p class="desc">
           Feel free to cantact me at any time, and I'll do my best to reply as soon as possible.
