--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display&display=swap" rel="stylesheet" />
 
-    <link rel="icon" type="image/png" href="src/mate.png" />
+    <link rel="icon" type="image/png" href="src/ico.png" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/animate.css" />
     <title>Portfolio | Gabi Berbetoros</title>
@@ -27,7 +27,7 @@
         <nav class="nav header__nav">
           <a class="nav-link" href="#skills">Skills</a>
           <a class="nav-link" href="#experience">Experience</a>
-          <a class="nav-link" href="#example">Examples</a>
+          <a class="nav-link" href="#examples">Examples</a>
           <a class="nav-link" href="#contact">Contact</a>
         </nav>
       </section>
